--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
   },
   "dependencies": {
     "react": "16.2.0",
-    "react-native": "0.52.2"
+    "react-native": "0.52.2",
+    "react-native-animatable": "^1.2.4",
+    "react-native-image-header-scroll-view": "../react-native-image-header-scroll-view",
+    "react-navigation": "^1.0.0-beta.28"
   },
   "devDependencies": {
     "babel-jest": "22.1.0",
     "babel-preset-react-native": "4.0.0",
     "jest": "22.1.4",
+    "prettier": "^1.10.2",
     "react-test-renderer": "16.2.0"
   },
   "jest": {
